welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:12: error: not found: value avnce
avnce()
^RunFour:17: error: not found: value avnce
avnce()
^